kubernetes/apps/home-automation/home-assistant/app/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
spec:
  healthCheck:
    active:
      healthyThreshold: 1
      http:
        expectedStatuses:
          - 200
        path: /
      interval: 10s
      timeout: 2s
      type: HTTP
      unhealthyThreshold: 3
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: home-assistant
