kubernetes/apps/home-automation/home-assistant/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  hostnames:
    - hass.bjw-s.dev
    - home-assistant.bjw-s.dev
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: home-assistant
      matches:
        - path:
            type: PathPrefix
            value: /
